--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ defusedxml==0.7.1
 distlib==0.3.6
 distro==1.7.0
 distro-info===1.1build1
+dj-database-url==2.0.0
 Django==4.2.1
 duplicity==0.8.21
 entrypoints==0.4
@@ -45,6 +46,7 @@ fonttools==4.39.3
 fqdn==1.5.1
 future==0.18.2
 gpg===1.16.0-unknown
+gunicorn==20.1.0
 html5lib==1.1
 httplib2==0.20.2
 idna==3.3
@@ -103,6 +105,7 @@ prometheus-client==0.15.0
 prompt-toolkit==3.0.36
 protobuf==3.12.4
 psutil==5.9.4
+psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycairo==1.20.1
@@ -144,6 +147,7 @@ tinycss2==1.2.1
 tomli==2.0.1
 tornado==6.2
 traitlets==5.8.0
+typing_extensions==4.5.0
 ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
