--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,13 @@ cffi==1.15.1
 cssselect2==0.7.0
 dj-database-url==2.0.0
 Django==4.2.1
+django-environ==0.10.0
 fonttools==4.39.4
 gunicorn==20.1.0
 html5lib==1.1
 Pillow==9.5.0
+psycopg==3.1.9
+psycopg2-binary==2.9.6
 pycparser==2.21
 pydyf==0.6.0
 pyphen==0.14.0
