--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-weasyprint==2.2.0
 fonttools==4.39.4
 gunicorn==20.1.0
 html5lib==1.1
+pango==1.50.6
 Pillow==9.5.0
 psycopg==3.1.9
 psycopg2-binary==2.9.6
